--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.pratikbutani:MultiSelectSpinner:-SNAPSHOT'
-
+    implementation 'com.lorentzos.swipecards:library:1.0.9@aar'
 }
