--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,16 +21,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".NewChat"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.CustomTheme"></activity>
-        <activity android:name=".Conversation" />
-        <activity android:name=".Message" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".DisplayActivities" />
-        <activity android:name=".CreateActivity" />
+        <activity android:name=".Conversation"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Message"
+            android:screenOrientation="portrait" />
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".DisplayActivities"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".CreateActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Register2"
+            android:screenOrientation="portrait"
             android:parentActivityName=".Register" />
-        <activity android:name=".Start">
+        <activity android:name=".Start"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,10 +47,12 @@
         </activity>
         <activity
             android:name=".Login"
-            android:parentActivityName=".Start" />
+            android:parentActivityName=".Start"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Register"
-            android:parentActivityName=".Start" />
+            android:parentActivityName=".Start"
+            android:screenOrientation="portrait" />
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
