--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature
         android:name="android.hardware.camera.any"
         android:required="true" />
@@ -20,24 +21,32 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewChat"
+        <activity android:name=".DisplaySelectedActivity"></activity>
+        <activity
+            android:name=".NewChat"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.CustomTheme"></activity>
-        <activity android:name=".Conversation"
+            android:theme="@style/AppTheme.CustomTheme" />
+        <activity
+            android:name=".Conversation"
             android:screenOrientation="portrait" />
-        <activity android:name=".Message"
+        <activity
+            android:name=".Message"
             android:screenOrientation="portrait" />
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".DisplayActivities"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".CreateActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".DisplayActivities"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".CreateActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Register2"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".Register" />
-        <activity android:name=".Start"
+            android:parentActivityName=".Register"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Start"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -53,6 +62,7 @@
             android:name=".Register"
             android:parentActivityName=".Start"
             android:screenOrientation="portrait" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
@@ -60,11 +70,8 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
-        <!--<meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />-->
     </application>
 
 </manifest>
