--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,11 @@
 
         </activity>
         <activity
+            android:name=".MyAccount"
+            android:screenOrientation="portrait">
+
+        </activity>
+        <activity
             android:name=".Login"
             android:parentActivityName=".Start"
             android:screenOrientation="portrait" />
